<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bg_main"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvConnection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/connection_status"
                android:textColor="@color/text_secondary"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/viewCommands"
                android:alpha="0.7"
                android:backgroundTint="@color/button_background"
                android:textColor="@color/button_text"
                android:textSize="14sp"/>


            <Button
                android:id="@+id/btnMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/menu"
                android:alpha="0.7"
                android:backgroundTint="@color/button_background"
                android:textColor="@color/button_text"
                android:textSize="14sp"/>

        </LinearLayout>



        <Space
            android:layout_width="match_parent"
            android:layout_height="350dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:alignmentMode="alignMargins"
            android:columnCount="3"
            android:rowCount="3">

            <!-- 第一行 -->
            <Button
                android:id="@+id/btnForwardLeft"
                style="@style/DirectionButton"
                android:text="@string/forward_left" />

            <Button
                android:id="@+id/btnForward"
                style="@style/DirectionButton"
                android:text="@string/forward" />

            <Button
                android:id="@+id/btnForwardRight"
                style="@style/DirectionButton"
                android:text="@string/forward_right" />

            <!-- 第二行 -->
            <Button
                android:id="@+id/btnLeft"
                style="@style/DirectionButton"
                android:text="@string/left" />

            <Button
                android:id="@+id/btnStop"
                style="@style/DirectionButton"
                android:text="@string/stop" />

            <Button
                android:id="@+id/btnRight"
                style="@style/DirectionButton"
                android:text="@string/right" />

            <!-- 第三行 -->
            <Button
                android:id="@+id/btnBackwardLeft"
                style="@style/DirectionButton"
                android:text="@string/backward_left" />

            <Button
                android:id="@+id/btnBackward"
                style="@style/DirectionButton"
                android:text="@string/backward" />

            <Button
                android:id="@+id/btnBackwardRight"
                style="@style/DirectionButton"
                android:text="@string/backward_right" />
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/speed_label"
                android:textColor="@color/text_secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBarSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/copyright"
            android:textColor="@color/text_secondary"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>